<resources>
    <string name="app_name">ZhouPics</string>
    <string name="select_photo">Select Photo</string>
    <string name="settings">Settings</string>
    <string name="version_x">Version %s</string>
    <string name="language">Language</string>
    <string name="downloads">Downloads</string>
    <string name="developer">Developer</string>
    <string name="composition">Composition</string>
    <string name="elimination">Elimination</string>
    <string name="beautify">Beautify</string>
    <string name="adjust">Adjust</string>
    <string name="filter">Filter</string>
    <string name="compare_faces">Compare Faces</string>
    <string name="contrast">Contrast</string>
    <string name="exposure">Exposure</string>
    <string name="saturation">Saturation</string>
    <string name="sharpness">Sharpness</string>
    <string name="brightness">Brightness</string>
    <string name="smooth">Smooth</string>
    <string name="white">White</string>
    <string name="lipstick">Lipstick</string>
    <string name="blusher">Blusher</string>
    <string name="eye_zoom">Eye Zoom</string>
    <string name="face_slim">Face Slim</string>
    <string name="all_photos">All Photos</string>
    <string name="unknown">Unknown</string>
    <string name="please_wait">Please wait…</string>
    <string name="preview_photo">Preview Photo</string>
    <string name="edit">Edit</string>
    <string name="select_another_photo">Select Another Photo</string>
    <string name="compare_loading_state_1">Preparing…</string>
    <string name="compare_loading_state_2">Request sent, waiting for server response…</string>
    <string name="compare_loading_state_3">Server responded</string>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>
    <string name="face_similarity">Face Similarity</string>
    <string name="face_not_detected">Face not detected</string>
    <string name="photo_not_loaded">Photo not loaded properly</string>
    <string name="fast_mode">Fast Mode</string>
    <string name="precise_mode">Precise Mode</string>
    <string name="fast_compare">Fast Compare</string>
    <string name="precise_compare">Precise Compare</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="mirror">Mirror</string>
    <string name="flip">Flip</string>
    <string name="freeform">Freeform</string>
    <string name="original">Original</string>
    <string name="saved_to_gallery">Saved to Gallery</string>
    <string name="saved_successfully">Saved successfully!</string>
    <string name="save_failed">Failed to save photo</string>
    <string name="back_to_home">Back to Home</string>
    <string name="filter_original">Original</string>
    <string name="filter_fairy_tale">Fairy Tale</string>
    <string name="filter_sunrise">Sunrise</string>
    <string name="filter_sunset">Sunset</string>
    <string name="filter_white_cat">White Cat</string>
    <string name="filter_black_cat">Black Cat</string>
    <string name="filter_beauty">Beauty</string>
    <string name="filter_whitening">Whitening</string>
    <string name="filter_healthy">Healthy</string>
    <string name="elimination_model">AI Elimination Model File</string>
    <string name="file_name_x">File name: %s</string>
    <string name="file_size_x">File size: %s</string>
    <string name="download">Download</string>
    <string name="paint">Paint</string>
    <string name="lariat">Lariat</string>
    <string name="eraser">Eraser</string>
    <string name="generate">Generate</string>
    <string name="model_not_ready">Model Not Ready</string>
    <string name="model_not_ready_tips">Remote AI resource \"%s\" should be downloaded in order to proceed.</string>
    <string name="download_now">Download Now</string>
    <string name="inpaint_error">AI inpaint error!</string>
    <string name="system_default">System Default</string>
    <string name="confirm">Confirm</string>
    <string name="debug_no_value" translatable="false">\???</string>
    <string name="promotion_text_1">\"ZhouPics\" is a fully open-source image manipulation tool for Android. It\'s created by: </string>
    <string name="github_name" translatable="false">\@AkatsukiRika</string>
    <string name="github_link" translatable="false">https://github.com/AkatsukiRika</string>
    <string name="promotion_text_2">You can visit the developer\'s personal website via the link below.</string>
    <string name="personal_website_name" translatable="false">JuanMing Web</string>
    <string name="personal_website_link" translatable="false">https://jm-frontend-two.vercel.app</string>
    <string name="promotion_text_3">Also feel free to try out \"ZhouTools\" - A work &amp; life management app supporting both Android and iOS!</string>
    <string name="zhoutools_name" translatable="false">ZhouTools</string>
    <string name="zhoutools_link" translatable="false">https://github.com/AkatsukiRika/ZhouTools</string>
    <string name="unable_to_open_link">Unable to open link</string>
</resources>