<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_bg_r32"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:layout_width="320dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/FontBold"
        android:text="@string/model_not_ready"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:maxLines="1"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="1sp"
        android:autoSizeTextType="uniform"
        android:autoSizeStepGranularity="1sp"
        android:layout_marginHorizontal="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/FontRegular"
        android:text="@string/model_not_ready_tips"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:lineHeight="18sp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_download_now"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/shape_bg_r1000"
        android:backgroundTint="@color/black"
        android:foreground="@drawable/ripple_rounded_r1000"
        style="@style/FontBold"
        android:gravity="center"
        android:text="@string/download_now"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

</LinearLayout>