<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_bg_r20"
    android:backgroundTint="@color/theme_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FontMedium"
            android:text="@string/promotion_text_1"
            android:textColor="@color/white"
            app:lineHeight="22sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bg_r20"
            android:backgroundTint="@color/theme_opposite"
            android:foreground="@drawable/dark_ripple_rounded_r20"
            android:layout_marginTop="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_image"
                android:layout_width="58dp"
                android:layout_height="58dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginVertical="12dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/transparent"
                app:strokeColor="@color/black_20p">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_github"
                    android:tint="@color/black_80p"
                    android:layout_gravity="center" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/card_image"
                app:layout_constraintTop_toTopOf="@id/card_image"
                app:layout_constraintBottom_toTopOf="@id/tv_link"
                android:layout_marginStart="8dp"
                style="@style/FontBold"
                android:textColor="@color/black_80p"
                android:text="@string/github_name"
                android:textSize="16sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:maxLines="1"
                android:layout_marginEnd="8dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintBottom_toBottomOf="@id/card_image"
                style="@style/FontRegular"
                android:textColor="@color/black_50p"
                android:text="@string/github_link"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="14sp"
                android:autoSizeMinTextSize="1sp"
                android:maxLines="1"
                android:layout_marginEnd="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FontMedium"
            android:text="@string/promotion_text_2"
            android:textColor="@color/white"
            app:lineHeight="22sp"
            android:layout_marginTop="16dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bg_r20"
            android:backgroundTint="@color/theme_opposite"
            android:foreground="@drawable/dark_ripple_rounded_r20"
            android:layout_marginTop="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_image_2"
                android:layout_width="58dp"
                android:layout_height="58dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginVertical="12dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/transparent"
                app:strokeColor="@color/black_20p">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_web"
                    android:tint="@color/black_80p"
                    android:layout_gravity="center" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/card_image_2"
                app:layout_constraintTop_toTopOf="@id/card_image_2"
                app:layout_constraintBottom_toTopOf="@id/tv_link_2"
                android:layout_marginStart="8dp"
                style="@style/FontBold"
                android:textColor="@color/black_80p"
                android:text="@string/personal_website_name"
                android:textSize="16sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:maxLines="1"
                android:layout_marginEnd="8dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_link_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_title_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_2"
                app:layout_constraintBottom_toBottomOf="@id/card_image_2"
                style="@style/FontRegular"
                android:textColor="@color/black_50p"
                android:text="@string/personal_website_link"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="14sp"
                android:autoSizeMinTextSize="1sp"
                android:maxLines="1"
                android:layout_marginEnd="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FontMedium"
            android:text="@string/promotion_text_3"
            android:textColor="@color/white"
            app:lineHeight="22sp"
            android:layout_marginTop="16dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bg_r20"
            android:backgroundTint="@color/theme_opposite"
            android:foreground="@drawable/dark_ripple_rounded_r20"
            android:layout_marginTop="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_image_3"
                android:layout_width="58dp"
                android:layout_height="58dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginVertical="12dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/transparent"
                app:strokeWidth="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/img_promotion_ztools"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/card_image_3"
                app:layout_constraintTop_toTopOf="@id/card_image_3"
                app:layout_constraintBottom_toTopOf="@id/tv_link_3"
                android:layout_marginStart="8dp"
                style="@style/FontBold"
                android:textColor="@color/black_80p"
                android:text="@string/zhoutools_name"
                android:textSize="16sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="1sp"
                android:maxLines="1"
                android:layout_marginEnd="8dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_link_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_title_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_3"
                app:layout_constraintBottom_toBottomOf="@id/card_image_3"
                style="@style/FontRegular"
                android:textColor="@color/black_50p"
                android:text="@string/zhoutools_link"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="14sp"
                android:autoSizeMinTextSize="1sp"
                android:maxLines="1"
                android:layout_marginEnd="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>