<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_progress"
            android:layout_width="58dp"
            android:layout_height="58dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="12dp"
            app:cardCornerRadius="10dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.tgwgroup.zhoupics.widgets.DownloadProgressView
                    android:id="@+id/v_download_progress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_save"
                    android:tint="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginStart="1dp" />

            </FrameLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/card_progress"
            app:layout_constraintEnd_toStartOf="@id/btn_download"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_file_name"
            android:layout_marginStart="8dp"
            style="@style/FontBold"
            android:textColor="@color/white_default"
            android:text="@string/elimination_model"
            android:textSize="16sp"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="16sp"
            android:autoSizeMinTextSize="1sp"
            android:maxLines="1"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintBottom_toTopOf="@id/tv_file_size"
            style="@style/FontRegular"
            android:textColor="@color/white_default"
            android:text="@string/file_name_x"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeMinTextSize="1sp"
            android:maxLines="1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_file_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_file_name"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_file_name"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/FontRegular"
            android:textColor="@color/white_default"
            android:text="@string/file_size_x"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeMinTextSize="1sp"
            android:maxLines="1"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btn_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/download"
            style="?attr/materialButtonOutlinedStyle"
            android:textSize="11sp"
            android:textColor="@color/filter_color_brown_light"
            android:layout_marginEnd="16dp"
            android:padding="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>